# khetika

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  POC.md  README.md  SECURITY.md  USER_MANUAL.md  app.py  cliff.toml  crop_calendar.py  database.py  pyproject.toml  requirements.txt
.specify/memory/: constitution.md
.specify/scripts/bash/: new-spec.sh  run.sh  setup.sh  test.sh
.specify/templates/: feature_spec_template.md  plan_template.md  spec_template.md  tasks_template.md
specs/001-multilingual-ui/: data-model.md  plan.md  spec.md  tasks.md
specs/002-groq-llm-migration/: plan.md  research.md  spec.md  tasks.md
specs/003-crop-calendar/: data-model.md  plan.md  spec.md  tasks.md
specs/004-farmer-profile/: data-model.md  plan.md  spec.md  tasks.md
static/: chat.js  manifest.json  sw.js
templates/: base.html  chat.html  knowledge_base.html  offline.html
tests/: test_app.py
